--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 							<h1>The Quest</h1>
 							<strong>July 27<sup>th</sup> 2K19</strong>
 							<p>10<sup>th</sup> Edition of the National Inter School Quiz Competition</p>
-							<ul class="actions"> <h2>Register Now!</h2>
-								<li><a href="#register" class="arrow scrolly"><span class="label">Next</span></a></li>
+							<ul class="actions"> <h2>Event Images -></h2>
+								<li><a href="https://drive.google.com/drive/u/0/folders/1VicIkZuzjNMVtCkgeSu4em6N2V9jE38B" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
